---------------------------------------------------------------------------------------------------
Version: 3.4.5
Date: ????
  Features:
---------------------------------------------------------------------------------------------------
Version: 3.4.4
Date: 2022-06-12
  Bugfixes:
    - Fixed a crash when a character has no crafting categories
    - Fixed a crash when the GUI tried to display the dummy-steel-axe item (https://todo.sr.ht/~raiguard/factorio-mods/28)
---------------------------------------------------------------------------------------------------
Version: 3.4.3
Date: 2022-05-22
  Bugfixes:
    - Fixed a crash when a technology has no research ingredients (#117)
---------------------------------------------------------------------------------------------------
Version: 3.4.2
Date: 2022-05-22
  Bugfixes:
    - Fixed a crash when an entity is mineable, but has no mineable products (#118)
---------------------------------------------------------------------------------------------------
Version: 3.4.1
Date: 2022-05-21
  Changes:
    - Updated Korean locale (by x2605) (#115)
    - Updated Russian locale (by astorin) (#116)
  Bugfixes:
    - Fixed flib dependency (#114)
---------------------------------------------------------------------------------------------------
Version: 3.4.0
Date: 2022-05-21
  Features:
    - Added new categories:
      - Entity type
      - Item type
      - Science pack: Uncheck a science pack to hide all objects that it unlocks (#89)
    - Added new interactions:
      - [Entity] Shift + click to get a blueprint (not just on the recipe screen) (#98)
    - Added new page contents:
      - [Entity] Entity type, expected resources
      - [Item] Affects recipes (for modules), Gathered from, item type
      - [Recipe] Pollution multiplier (#113)
    - Added new pages:
      - Entity type: All entities of the given type
      - Item type: All items of the given type
  Changes: