@@ -353,6 +353,7 @@ item-with-entity-data=Item with entity data
 item-with-inventory=Item with inventory
 item-with-label=Item with label
 item-with-tags=Item with tags
+mining-tool=Mining tool (migration only)
 module=Module
 rail-planner=Rail planner
 repair-tool=Repair tool
