@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 3.4.5
 Date: ????
-  Features:
+  Bugfixes:
+    - Fixed a crash when a mining tool is used in a recipe (https://todo.sr.ht/~raiguard/factorio-mods/29)
 ---------------------------------------------------------------------------------------------------
 Version: 3.4.4
 Date: 2022-06-12
